# fx

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/fx-app/: Cargo.toml
crates/fx-app/src/: app.rs  bench.rs  fonts.rs  icons.rs  main.rs  telemetry.rs  theme.rs
crates/fx-core/: Cargo.toml
crates/fx-core/src/: entry.rs  enumerate.rs  filter.rs  lib.rs  synth.rs  timefmt.rs
crates/fx-index/: Cargo.toml
crates/fx-index/src/: lib.rs  mft.rs  persist.rs  usn.rs  walk.rs
crates/fx-platform/: Cargo.toml
crates/fx-platform/src/: lib.rs  shell.rs
