[workspace]
resolver = "2"
members = [
    "crates/fx-core",
    "crates/fx-index",
    "crates/fx-platform",
    "crates/fx-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["FX contributors"]

[workspace.dependencies]
fx-core = { path = "crates/fx-core" }
fx-index = { path = "crates/fx-index" }
fx-platform = { path = "crates/fx-platform" }

# UI stack. Same versions as the conduit engine so the local cargo registry
# cache is warm and known-good.
eframe = "0.34.3"

[profile.dev]
# Keep our crates debuggable but optimize dependencies (egui/wgpu are
# unusable fully-unoptimized).
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
