[package]
name = "fx-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fx-core = { workspace = true }
fx-index = { workspace = true }
eframe = { workspace = true }
fx-platform.workspace = true
egui-phosphor = { version = "0.12.0", default-features = false, features = ["fill", "bold"] }
