[package]
name = "fx-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",     # GetLogicalDrives for the sidebar
    "Win32_System_Com",
    "Win32_System_LibraryLoader",   # GetModuleHandleW for the menu owner window class
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging", # popup menus + hidden owner window
] }
